# llm

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
llm/Agent/: Agent.py  main.py  tools.py  utils.py
llm/LLaMA2/: Attention.py  DecodeLayer.py  MLP.py  ModelConfig.py  RSNorm.py  Transformer.py
llm/RAG/: README.md  VectorBase.py  main.py  utils.py
llm/RAG/Embeddings/: BaseEmbedding.py  OpenAiEmbedding.py
llm/RAG/LLM/: BaseModel.py  OpenAIChat.py
vector-embedding/: 00-setup.py  01-basics.py  02-semantic-search.py  03-clustering.py  04-similarity.py  05-rag-system.py  06-visualization.py  resources.md
