[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "markdown>=3.9",
    "numpy==1.26.4",
    "openai>=2.0.0",
    "pypdf2>=3.0.1",
    "tiktoken>=0.11.0",
    "torch==2.4.0",
    "transformers==4.44.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
